fixing text wrapping on cs cards

--- a/assets/main.css
+++ b/assets/main.css
@@ -318,6 +318,7 @@ li {
 }
 
 .case-studies-wrapper {
+    display: grid;
     grid-template-columns: repeat(auto-fill, minmax(465px, 1fr)); /* TIP FROM: https://stackoverflow.com/questions/43662552/getting-columns-to-wrap-in-css-grid */
     padding: 0 3vw;
     grid-gap: 0 20px;
@@ -333,9 +334,6 @@ li {
     text-align: center;
 }
 
-.case-study-text {
-    width: 40%;
-}
 
 .case-study-text>img {
     height: 80px;
